--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,14 +1,4 @@
-<div *ngIf="isAnyHeroSelected()">
-    <h2>
-        {{ selectedHero.name | uppercase }} Details</h2>
-    <div>
-        <span>id: </span>{{selectedHero.id}}</div>
-    <div>
-        <label>name:
-            <input [(ngModel)]="selectedHero.name" placeholder="name">
-        </label>
-    </div>
-</div>
+<app-hero-detail *ngIf="isAnyHeroSelected()" [hero]="selectedHero"></app-hero-detail>
 
 <h2>My Heroes</h2>
 
