--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,4 +20,5 @@ body, input[text], button {
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
