--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-messages></app-messages>
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<app-messages></app-messages>
+<router-outlet></router-outlet>
