--- a/src/colors.scss
+++ b/src/colors.scss
@@ -17,3 +17,4 @@ $color-electron-blue--lighter: lighten($color-electron-blue, 5%);
 
 // red tone
 $color-chi-gong: #d63031;
+$color-pink-glamour: #ff7675;
