--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,5 +4,6 @@
     <li class="hero" *ngFor="let hero of heroes" [routerLink]="['/hero', hero.id]">
         <span class="badge">{{hero.id}}</span>
         <span class="name">{{hero.name}}</span>
+        <button class="delete-button" type="button" (click)="delete($event, hero)">Delete</button>
     </li>
 </ul>
