--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -14,6 +14,7 @@
     overflow: hidden;
     border: transparent 1px solid;
     transition: all 0.25s;
+    position: relative;
 }
 
 .hero + .hero {
@@ -35,6 +36,20 @@
     transition: all 0.25s;
 }
 
+.delete-button {
+    position: absolute;
+    right: -50px;
+    top: 0;
+    bottom: 0;
+    background: $color-pink-glamour;
+    color: white;
+    border: 0;
+    &:hover {
+        background: $color-chi-gong;
+        cursor: pointer;
+    }
+}
+
 .hero:hover {
     cursor: pointer;
 
@@ -44,6 +59,11 @@
 
     .badge {
         background: $color-electron-blue--lighter;
+    }
+
+    .delete-button {
+        transition: all 0.1s;
+        right: 0;
     }
 }
 
